--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,21 +3,28 @@ apply plugin: 'com.android.application'
 
 android {
     signingConfigs {
+        config {
+            keyAlias 'angira'
+            keyPassword '123456'
+            storeFile file('D:/Angira/AndroidStudioProjects/KisanBharati/key/KisanBharati.jks')
+            storePassword '123456'
+        }
     }
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 28
     defaultConfig {
         applicationId "angiratech.com.kisaanapp"
         minSdkVersion 16
-        targetSdkVersion 23
-        versionCode 12
-        versionName "1.11"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        targetSdkVersion 28
+        versionCode 14
+        versionName "1.13"
+        vectorDrawables.useSupportLibrary = true
+        signingConfig signingConfigs.config
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
     }
     compileOptions {
@@ -25,37 +32,36 @@ android {
         targetCompatibility JavaVersion.VERSION_1_7
 
     }
-    dexOptions {
+    /*dexOptions.incremental {
         incremental true
         javaMaxHeapSize "4g"
             jumboMode = true
+    }*/
+    productFlavors {
     }
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile files('libs/ActiveAndroid-3.1-08c6335cd.jar')
-    compile 'com.android.support:recyclerview-v7:25.1.1'
-    compile 'com.android.support:appcompat-v7:25.1.1'
-    compile 'com.android.support:design:25.1.1'
-
-
-    compile 'com.android.support:support-annotations:25.1.1'
-
-
-    compile 'com.github.ganfra:material-spinner:1.1.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.mcxiaoke.volley:library:1.0.19'
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
-    compile 'com.android.support:cardview-v7:25.1.1'
-    compile 'com.squareup.retrofit2:retrofit:2.0.2'
-    compile 'com.squareup.okhttp3:okhttp:3.5.0'
-    testCompile 'junit:junit:4.12'
-    compile files('libs/android-async-http-1.4.5.jar')
-    compile files('libs/httpcore-4.1.2.jar')
-    compile files('libs/YouTubeAndroidPlayerApi.jar')
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation files('libs/ActiveAndroid-3.1-08c6335cd.jar')
+    //noinspection GradleCompatible
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
+    implementation 'com.android.support:design:28.0.0-rc02'
+    implementation 'com.android.support:support-annotations:27.1.1'
+    implementation 'com.github.ganfra:material-spinner:1.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.mcxiaoke.volley:library:1.0.19'
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    implementation 'com.android.support:cardview-v7:28.0.0-rc02'
+    implementation 'com.squareup.retrofit2:retrofit:2.0.2'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation files('libs/android-async-http-1.4.5.jar')
+    implementation files('libs/httpcore-4.1.2.jar')
+    implementation files('libs/YouTubeAndroidPlayerApi.jar')
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.google.firebase:firebase-messaging:17.3.1'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
